--- a/visuprot_js/html/index.html
+++ b/visuprot_js/html/index.html
@@ -275,7 +275,7 @@
 </body>
 <script src="/src/style.js"></script>
 <!-- <script src="src/ligandViewer.js"></script> -->
-<script src="/src/navbar.js"></script>
+<script src="../src/navbar.js"></script>
 
 
 </html>
