--- a/visuprot_js/html/index.html
+++ b/visuprot_js/html/index.html
@@ -254,6 +254,28 @@
         NGL.download(blob, "screenshot.png");
       });
     }
+      
+       //Download PDB
+    
+    function downloadPDB(){
+      var idPdb = document.getElementById("field1").value;
+      var url = "https://dx.doi.org/10.2210/pdb"+idPdb+"/pdb"
+      window.open(url,'_blank');
+    }
+
+    function downloadCSV(){
+      const rows = [
+        ["name1", "city1", "some other info"],
+        ["name2", "city2", "more info"]
+      ];
+      let csvContent = "data:text/csv;charset=utf-8,";
+      rows.forEach(function(rowArray){
+        let row = rowArray.join(",");
+        csvContent += row + "\r\n";
+      });
+      var encodedUri = encodeURI(csvContent);
+      window.open(encodedUri);
+    }
 
     // Fullscreen
 
