--- a/visuprot_js/html/index.html
+++ b/visuprot_js/html/index.html
@@ -264,9 +264,11 @@
     }
 
     function downloadCSV(){
+      const idPDB = document.getElementById("idpdb")
+      const name = document.getElementById("name")
       const rows = [
-        ["name1", "city1", "some other info"],
-        ["name2", "city2", "more info"]
+        ["PDB Identifier", idPDB],
+        ["Protein Name", name]
       ];
       let csvContent = "data:text/csv;charset=utf-8,";
       rows.forEach(function(rowArray){
