--- a/visuprot_js/html/template_header.html
+++ b/visuprot_js/html/template_header.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8" />
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="header">
-        <img class="img-responsive" src="../img/logo.svg" alt="Logo" style="width: 6%">
+        <img class="img-responsive" id = "logo" src="../img/logo.svg" alt="Logo" style="width: 6%">
         <a class="navbar-brand" href="#" style="margin-left: 5%"> HARVI Protein Viewer</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,19 +38,48 @@
                 <div class="card card-body">
                         <form>
                                 <div class="form-group">
-                                  <label for="exampleInputEmail1">Protein 1</label>
-                                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter PDB ID">
+                                  <label >Protein 1</label>
+                                  <input  class="form-control" id="prot1"  placeholder="Enter Uniprot ID">
                                 </div>
                                 <div class="form-group">
                                   <label for="exampleInputPassword1">Protein 2</label>
-                                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter PDB ID">
+                                  <input class="form-control" id="prot2" placeholder="Enter Uniprot ID">
                                 </div>
                                 <!-- <div class="form-check">
                                   <input type="checkbox" class="form-check-input" id="exampleCheck1">
                                   <label class="form-check-label" for="exampleCheck1">Check me out</label>
                                 </div>-->
-                                <button type="submit" class="btn btn-primary">Submit</button> 
+                                <button type="submit" class="btn btn-primary" id = "btn">Submit</button> 
                               </form>                </div>
             </div>
         </div>
     </div>
+
+    <script>
+      $(document).ready(function () {
+        $("#btn").click(function () {
+          prot1 = $("#prot1").val();
+          prot2 = $("#prot2").val();
+          jQuery.get(path, function (data) {
+            lines = data.split("\n");
+            header = lines[0];
+            for (var i in lines) {
+              complex = lines[i].split(",")
+              if (prot1 == complex[1]) {
+                  if (prot2 == complex[2]) {
+                    $("#field1").val(complex[0]); 
+                    displayProtein();
+                }
+              }
+              else if (prot2 == complex[1]) {
+                  if (prot1 == complex[2]) {
+                    $("#field1").val(complex[0]); 
+                    displayProtein();
+                }
+              }
+            }
+          });
+        });
+      });
+    </script>
+
