--- a/visuprot_js/html/template_header.html
+++ b/visuprot_js/html/template_header.html
@@ -45,18 +45,19 @@
                                   <label for="exampleInputPassword1">Protein 2</label>
                                   <input class="form-control" id="prot2" placeholder="Enter Uniprot ID">
                                 </div>
-                                <!-- <div class="form-check">
-                                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                  <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                                </div>-->
-                                <button type="submit" class="btn btn-primary" id = "btn">Submit</button> 
+                                <button type="button" class="btn btn-primary" id = "btn">Submit</button> 
                               </form>                </div>
             </div>
         </div>
     </div>
 
+
     <script>
       $(document).ready(function () {
+        $("#logo").click(function () {
+          console.log("coucou");
+        });
+
         $("#btn").click(function () {
           prot1 = $("#prot1").val();
           prot2 = $("#prot2").val();
